reasoning_transformations/CRUXEval/Transformations/logs/sample_44.log
STARTING AT 2024-10-19 22:33:53.596477
[START] processing file: sample_44
*Running tests for: sample_44
 
Result: ['tests_pass']
tests_pass sample_44 /home/yang/Benchmark/dataset/cruxeval/code//sample_44.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_44
 
Result: ['tests_pass']
Checking transformation add_nested_if
*Running tests for: sample_44
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_44
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_44
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_44", line 17
    break
    ^^^^^
SyntaxError: 'break' outside loop

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_44", line 17\n    break\n    ^^^^^\nSyntaxError: \'break\' outside loop\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_44
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_44
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_44
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_44
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_44
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_44
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_44
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_44
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_44.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_44.py
*Running tests for: sample_44
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_nested_if',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_44.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_44',
  'genetic_algorithm': None,
  'original_code': 'def f(text):\n'
                   '    ls = list(text)\n'
                   '    for i in range(0, len(ls)):\n'
                   "        if ls[i] != '+':\n"
                   "            ls.insert(i, '+')\n"
                   "            ls.insert(i, '*')\n"
                   '            break\n'
                   "    return '+'.join(ls)",
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_44.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_44.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_44.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 4.616279,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      "    HTTPConnection('google.com', port=80)\n"
                      "    parse('2024-10-19 22:33:57')\n"
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc_BinOp0(a, b):\n'
                      "    base64.b64encode(b'61937308088676297273')\n"
                      '    return a // b\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(text):\n'
                      '    Fernet.generate_key()\n'
                      '    time.sleep(0.01)\n'
                      '    shuffle([28, 87, 6])\n'
                      '    datetime.datetime.now()\n'
                      '    ttest_ind([23, 63, 66], [8, 10, 58])\n'
                      '    try:\n'
                      '        ls = list(text)\n'
                      '        LoopChecker13 = [671][0]\n'
                      '        LoopChecker23 = 670\n'
                      '        ConditionChecker17 = 395\n'
                      '        ConditionChecker27 = 879\n'
                      '        for LoopIndexOut in '
                      'range(newFunc_BinOp0(LoopChecker13, LoopChecker23)):\n'
                      '            for newi_1 in range(0, len(ls)):\n'
                      '                if ConditionChecker17 & '
                      'ConditionChecker27:\n'
                      "                    if ls[newi_1] != '+':\n"
                      "                        ls.insert(newi_1, '+')\n"
                      "                        ls.insert(newi_1, '*')\n"
                      '                        break\n'
                      '        else:\n'
                      '            pass\n'
                      "        return '+'.join(ls)\n"
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_44. Total Time: 4.616279
END AT 2024-10-19 22:33:58.214888
